# aust-covid

./: .gitattributes  .gitignore  README.md  austcovid.bib  calibration.py  doc_utils.py  model.py  parameters.yml  pyproject.toml  setup.py
aust_covid/: calibration.py  calibration_outputs.py  constants.py  doc_utils.py  extra_text.py  inputs.py  intro.py  mobility.py  model.py  model_utils.py  output_utils.py  outputs.py  plotting.py  tracking.py  utils.py  vaccination.py
data/: Australian Households, cold-flu-COVID-19 symptoms, tests, and positive cases in the past four weeks, by time of reporting .csv  README.md  aus_vax_data.csv  cens_01nhtype__custom_5281928_page_spreadsheet.xlsx  cens_01nscbirth__custom_6028079_page_spreadsheet.xlsx  cens_01nsres__custom_5281131_page_spreadsheet.xlsx  covid-19-vaccination-vaccination-data-22-december-2022.xlsx  covid-19-vaccination-vaccination-data-28-february-2022.xlsx  population_data_notebook.ipynb  work.csv
doc_utils/: calib_doc_utils.py  general_doc_utils.py
documentation/: calibration_outputs.py
emutools/: calibration.py  inputs.py  parameters.py  plotting.py  tex.py  utils.py
explore/: calibration_results.ipynb  dispersion.ipynb  likelihood_comparison.ipynb  output_ranges.ipynb  pop_check.ipynb  spaghetti.ipynb  spaghetti_comparison.ipynb
general_utils/: calibration.py  calibration_utils.py  inputs.py  parameter_utils.py  tex_utils.py
inputs/: constants.py  parameters.yml
notebook/: add_2021_data.ipynb  aust_covid.ipynb  aust_covid_springboard.ipynb  austcovid-good-calibration.ipynb  austcovid.ipynb  cdr_wrangling.ipynb  get_runs.ipynb  ifr.ipynb  latex_restructure.ipynb  latex_supp_writing.ipynb  latex_tables.ipynb  load_targets.ipynb  load_uk_pop_data.ipynb  symp_to_detect_data.ipynb  temp_model.ipynb  vacc_data.ipynb  wrangle_matrix.ipynb  wrangle_mobility.ipynb
notebooks/: apply_vaccination.ipynb  aus_covid_vacc.ipynb  aus_covid_vax.ipynb  aus_covid_vax_jt.ipynb  aus_vax_data_pulldown.ipynb  aust_covid.ipynb  calibrate.ipynb  calibration_results.ipynb  (+36 more)
(+96 files in other folders)
