[tool.poetry]
name = "aust_covid"
version = "0.1"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "https://github.com/monash-emu/aust-covid"
repository = "https://github.com/monash-emu/aust-covid"
documentation = "https://github.com/monash-emu/aust-covid"
keywords = [
    "covid19",
    "summerepi"
]
description = "Implementation of packages developed by EMU to the epidemiological problem of the 2022 COVID-19 epidemic in Australia"
authors = ["James Trauer <james.trauer@monash.edu>"]
packages = [
    {include = "aust_covid"},
    {include = "emutools"}
]

[tool.poetry.dependencies]
python = ">=3.8.0, <4.0.0"
estival = "==0.4.9"
kaleido = "==0.2.1"
pylatex = "==1.4.1"
summerepi2 = ">=1.3.0"
seaborn = "==0.13.2"
tables = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
